tests/ui/source-enum-not-error.stderr
error[E0599]: no method named `as_dyn_error` found for reference `&std::string::String` in the current scope
   --> $DIR/source-enum-not-error.rs:7:9
    |
7   |           source: String,
    |           ^^^^^^ method not found in `&std::string::String`
    |
    = note: the method `as_dyn_error` exists but the following trait bounds were not satisfied:
            `std::string::String: std::error::Error`
            which is required by `std::string::String: thiserror::private::AsDynError`
            `&std::string::String: std::error::Error`
            which is required by `&std::string::String: thiserror::private::AsDynError`
            `str: std::marker::Sized`
            which is required by `str: thiserror::private::AsDynError`
            `str: std::error::Error`
            which is required by `str: thiserror::private::AsDynError`
